fixed spacing issue on bookmark link text

--- a/css/sea_atlas_explorer.css
+++ b/css/sea_atlas_explorer.css
@@ -212,7 +212,7 @@ li.active .tab-description {
 #bookmark-link-text {
 	position: absolute;
 	top: 5px;
-	right: -160px;
+	left: 35px;
 	display: none;
 }
 #bookmark-link-text.active {
